--- a/calculator.html
+++ b/calculator.html
@@ -13,6 +13,10 @@ function power4() {
  var num = document.getElementById("n1");
  num.value = Math.pow(num.value, 4);
 }
+function square() {
+ var num = document.getElementById("n1");
+ num.value = Math.pow(num.value, 2);
+}
 </script>
 </head>
 <body>
@@ -22,5 +26,6 @@ function power4() {
  <button onclick="cube()"> x^3 </button>
  <button onclick="sine()"> sin(x) </button>
  <button onclick="power4()"> x^4 </button>
+ <button onclick="square()"> x^2 </button>
 </body>
 </html>
